--- a/verkefni 5/sassy_styles.css
+++ b/verkefni 5/sassy_styles.css
@@ -2,16 +2,13 @@
   padding: 0;
   margin: 0;
   list-style: none;
-  
   display: -webkit-box;
   display: -moz-box;
   display: -ms-flexbox;
   display: -webkit-flex;
   display: flex;
-  
   -webkit-flex-flow: row wrap;
-  justify-content: space-around;
-}
+  justify-content: space-around; }
 
 .flex-item {
   background: tomato;
@@ -19,79 +16,70 @@
   width: 200px;
   height: 150px;
   margin-top: 10px;
-  
   line-height: 150px;
   color: white;
   font-weight: bold;
   font-size: 3em;
-  text-align: center;
-}
+  text-align: center; }
 
 .navigation {
   list-style: none;
-  margin: 0; 
-  
+  margin: 0;
   background: deepskyblue;
-  
   display: -webkit-box;
   display: -moz-box;
   display: -ms-flexbox;
   display: -webkit-flex;
   display: flex;
-  
   -webkit-flex-flow: row wrap;
-  justify-content: flex-end;
-}
+  justify-content: flex-end; }
 
 .navigation a {
   text-decoration: none;
   display: block;
   padding: 1em;
-  color: white;
-}
+  color: white; }
 
 .navigation a:hover {
-  background: darken(deepskyblue, 2%);
-}
+  background: #00b7f5; }
 
 @media all and (max-width: 800px) {
   .navigation {
-    justify-content: space-around;
-  }
-}
-
+    justify-content: space-around; } }
 @media all and (max-width: 600px) {
   .navigation {
     -webkit-flex-flow: column wrap;
     flex-flow: column wrap;
-    padding: 0;
-  }
-  
-  .navigation a { 
-    text-align: center; 
+    padding: 0; }
+
+  .navigation a {
+    text-align: center;
     padding: 10px;
-    border-top: 1px solid rgba(255,255,255,0.3); 
-    border-bottom: 1px solid rgba(0,0,0,0.1); 
-  }
+    border-top: 1px solid rgba(255, 255, 255, 0.3);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1); }
 
-  
   .navigation li:last-of-type a {
-    border-bottom: none;
-  }
-}
-
+    border-bottom: none; } }
 .footer {
-  background: blue;
-}
+  background: blue; }
 
 @media all and (min-width: 600px) {
-  .aside { flex: 1 auto; }
-}
-
+  .aside {
+    flex: 1 auto; } }
 @media all and (min-width: 800px) {
-  .main    { flex: 3 0px; }
-  .aside-1 { order: 1; } 
-  .main    { order: 2; }
-  .aside-2 { order: 3; }
-  .footer  { order: 4; }
-}
+  .main {
+    flex: 3 0px; }
+
+  .aside-1 {
+    order: 1; }
+
+  .main {
+    order: 2; }
+
+  .aside-2 {
+    order: 3; }
+
+  .footer {
+    order: 4; } }
+
+/*# sourceMappingURL=sassy_styles.css.map */
