--- a/verkefni 5/styles.css
+++ b/verkefni 5/styles.css
@@ -3,36 +3,20 @@
 body {
   background: linear-gradient(to right, #ccc, #444);
   background-attachment: fixed;
-  width: 1100px;
+  width: 100%;
+  height: 500px;
   margin: auto;
   border-radius: 10px;
   color: #535353; }
 
-.flex-container {
-  padding: 0;
-  margin: 0;
-  list-style: none;
-  
-  display: -webkit-box;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  
-  -webkit-flex-flow: row wrap;
-  justify-content: space-around;
-}
-
-.flex-item {
-  background: tomato;
-  padding: 5px;
-  width: 200px;
-  height: 150px;
-  margin-top: 10px;
-  
-  line-height: 150px;
-  color: white;
-  font-weight: bold;
-  font-size: 3em;
-  text-align: center;
-}
+  article {
+  border-radius: auto;
+  box-sizing: border-box;
+  width: 50%;
+  float: left;
+  padding: 0px 20px;
+  background-color: white;
+  font-family: 'Fjalla One', sans-serif;
+  border: 1px solid red;
+  height: 400px;
+  margin-top: 30px;}
