--- a/verkefni 5/sassy_styles.css
+++ b/verkefni 5/sassy_styles.css
@@ -25,7 +25,7 @@
 .navigation {
   list-style: none;
   margin: 0;
-  background: deepskyblue;
+  background: #ffbf00;
   display: -webkit-box;
   display: -moz-box;
   display: -ms-flexbox;
@@ -35,7 +35,7 @@
   justify-content: flex-end; }
 
 .navigation a {
-  text-decoration: none;
+  text-decoration: #ffbf00;
   display: block;
   padding: 1em;
   color: white; }
@@ -81,5 +81,17 @@
 
   .footer {
     order: 4; } }
+.flex-item-2 {
+  background: grey;
+  padding: 5px;
+  width: 300px;
+  height: 200px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  line-height: 150px;
+  color: white;
+  font-weight: bold;
+  font-size: 3em;
+  text-align: center; }
 
 /*# sourceMappingURL=sassy_styles.css.map */
