--- a/verkefni 5/sassy_styles.scss
+++ b/verkefni 5/sassy_styles.scss
@@ -1,8 +1,7 @@
 .flex-container {
   padding: 0;
   margin: 0;
-  list-style: none;
-  
+  list-style: none;  
   display: -webkit-box;
   display: -moz-box;
   display: -ms-flexbox;
@@ -14,7 +13,7 @@
 }
 
 .flex-item {
-  background: tomato;
+  background: linear-gradient(to right, #1a1a1a, black);
   padding: 5px;
   width: 200px;
   height: 150px;
@@ -23,15 +22,22 @@
   line-height: 150px;
   color: white;
   font-weight: bold;
-  font-size: 3em;
   text-align: center;
+  border: 2px solid yellow;
+  border-radius: 150px;  
+  font-family: 'Fjalla One', sans-serif;
 }
 
 .navigation {
   list-style: none;
-  margin: 0; 
+  position: fixed;
+  width: 100%;
+  top: 0;
+  margin: 0;
+  border-bottom: 1px solid black;
+
   
-  background: deepskyblue;
+    background: linear-gradient(to right, yellow, #cc9900);
   
   display: -webkit-box;
   display: -moz-box;
@@ -47,11 +53,12 @@
   text-decoration: none;
   display: block;
   padding: 1em;
-  color: white;
+  color: black;
+  transition: color 1s;
 }
 
 .navigation a:hover {
-  background: darken(deepskyblue, 2%);
+  background: linear-gradient(to right, #1a1a1a, black);  color: white;
 }
 
 @media all and (max-width: 800px) {
@@ -94,4 +101,19 @@
   .main    { order: 2; }
   .aside-2 { order: 3; }
   .footer  { order: 4; }
+}
+
+.flex-item-2
+{
+  background: grey;
+  padding: 5px;
+  width: 300px;
+  height: 200px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  font-size: 30px;
+  line-height: auto;
+  color: white;
+  font-weight: bold;
+  text-align: center;
 }
