--- a/verkefni 5/sassy_styles.scss
+++ b/verkefni 5/sassy_styles.scss
@@ -13,7 +13,7 @@
 }
 
 .flex-item {
-  background: linear-gradient(to right, #1a1a1a, black);
+  background: linear-gradient(to right, #dd1c1c, #a31111);
   padding: 5px;
   width: 200px;
   height: 150px;
@@ -37,7 +37,7 @@
   border-bottom: 1px solid black;
 
   
-    background: linear-gradient(to right, yellow, #cc9900);
+    background: linear-gradient(to right, #dd1c1c, #a31111);
   
   display: -webkit-box;
   display: -moz-box;
@@ -105,7 +105,7 @@
 
 .flex-item-2
 {
-  background: grey;
+  background: #a31111;
   padding: 5px;
   width: 300px;
   height: 200px;
@@ -113,7 +113,7 @@
   margin-bottom: 30px;
   font-size: 30px;
   line-height: auto;
-  color: white;
+  color: black;
   font-weight: bold;
   text-align: center;
 }
